--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     
-    <header class="cabecera ">
+    <header class="cabecera bg-black ">
 
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-dark">
 
             <div class="container-fluid">
 
@@ -25,7 +25,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
 
-              <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav navegador ">
                   <li class="nav-item">
                     <a class="nav-link"  href="#">INICIO</a>
