--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
         <div class="container-fluid">
 
+          <div class="row text-center">
+            <img class="sticker" src="./imagen/imagenstickerpng.png" alt="">
+          </div>
             <div class="row text-center">
               <p class="inicio__texto1">VIVIENDAS MODULARES</p>
             </div>
