--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <p class="inicio__texto2">TU CASA EN 30 DIAS SIN PASAR POR OBRA</p>
              </div>
             
-             <div class="row text-center">
-                <a class="incio__texto3" href="./paginas/viviendas.html">VER MÁS</a>
+             <div class="row text-center d-block">
+                <a class="incio__texto3" href="./paginas/viviendas.html">Ver más</a>
              </div>
 
         </div>
@@ -77,7 +77,7 @@
 
             <div class="secciones col-lg-4 col-sm-12">
                 <p class="footer__secciones mx-2 my-2"> 
-                    NOSOTROS
+                   | NOSOTROS
                 </p>
                 <p>
                     Somos una empresa dedicada a la construcción de <b>viviendas modulares</b>. 
@@ -90,7 +90,7 @@
             </div>
 
             <div class="secciones col-lg-4 col-sm-12">
-                <p class="footer__secciones  mx-2 my-2"> HORARIOS</p>
+                <p class="footer__secciones  mx-2 my-2"> | HORARIOS</p>
                 <p >
                     Horarios de atención al cliente
                 </p>
@@ -100,7 +100,7 @@
             </div>
 
             <div class="secciones col-lg-4 col-sm-12">
-                <P class="footer__secciones  mx-2 my-2">UBICACION</P>
+                <P class="footer__secciones  mx-2 my-2"> | UBICACION</P>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3263.515441662277!2d-60.48994998476868!3d-35.118808680329295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bedc2a88e744f3%3A0x9ea56080ef668e00!2sGral.%20Paz%201499%2C%20Bragado%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1648065619587!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
