--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
 
         <div class="container-fluid">
 
-          <div class="row text-center">
-            <img class="sticker" src="./imagen/imagenstickerpng.png" alt="">
-          </div>
+            <div class="row text-center">
+              <img class="sticker" src="./imagen/imagenstickerpng.png" alt="Sticker">
+             </div>
+
             <div class="row text-center">
               <p class="inicio__texto1">VIVIENDAS MODULARES</p>
             </div>
@@ -64,7 +65,7 @@
                 <p class="inicio__texto2">TU CASA EN 30 DIAS SIN PASAR POR OBRA</p>
              </div>
             
-             <div class="row text-center d-block">
+             <div class="row text-center d-block inicio__boton">
                 <a class="incio__texto3" href="./paginas/viviendas.html">Ver más</a>
              </div>
 
