--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
 
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+              <div class="navegador collapse navbar-collapse justify-content-end " id="navbarNav">
                 <ul class="navbar-nav navegador ">
                   <li class="nav-item">
                     <a class="nav-link"  href="#">INICIO</a>
