Agregue footer con SASS

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 
     </main>
 
-    <footer class="container-fluid footer">
+    <footer class="footer container-fluid">
         <div class="row">
 
             <div class="secciones col-lg-4 col-sm-12">
-                <p class="footer__secciones mx-2 my-2"> 
+                <p class="secciones__footer mx-2 my-2"> 
                    | NOSOTROS
                 </p>
                 <p>
@@ -91,7 +91,7 @@
             </div>
 
             <div class="secciones col-lg-4 col-sm-12">
-                <p class="footer__secciones  mx-2 my-2"> | HORARIOS</p>
+                <p class="secciones__footer  mx-2 my-2"> | HORARIOS</p>
                 <p >
                     Horarios de atención al cliente
                 </p>
@@ -101,7 +101,7 @@
             </div>
 
             <div class="secciones col-lg-4 col-sm-12">
-                <P class="footer__secciones  mx-2 my-2"> | UBICACION</P>
+                <P class="secciones__footer  mx-2 my-2"> | UBICACION</P>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3263.515441662277!2d-60.48994998476868!3d-35.118808680329295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bedc2a88e744f3%3A0x9ea56080ef668e00!2sGral.%20Paz%201499%2C%20Bragado%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1648065619587!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
