--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
              </div>
             
              <div class="row text-center d-block inicio__boton">
-                <a class="incio__texto3" href="./paginas/viviendas.html">Ver más</a>
+                <a class="inicio__texto3" href="./paginas/viviendas.html">Ver más</a>
              </div>
 
         </div>
